@@ -13,7 +13,7 @@ public class SpawnHousesConfig : ModConfig
 	
 	[DefaultValue(true)]
 	[ReloadRequired]
-	public bool EnableMainBasement { get; set; }
+	public bool EnableSpawnPointBasement { get; set; }
 	
 	[DefaultValue(true)]
 	[ReloadRequired]
