@@ -57,6 +57,21 @@ public class MainBasement_Entry1 : CustomChainStructure
         SetSubstructurePositions();
     }
     
+    protected override void SetSubstructurePositions()
+    {
+        foreach (var floor in Floors)
+            floor.SetPosition(mainStructureX: X, mainStructureY: Y);
+        for (byte direction = 0; direction < 4; direction++)
+            foreach (var connectPoint in ConnectPoints[direction])
+                connectPoint.SetPosition(mainStructureX: X, mainStructureY: Y);
+        
+        StructureBoundingBoxes =
+        [
+            new BoundingBox(X - BoundingBoxMargin - 100, Y - BoundingBoxMargin, X + StructureXSize + 100 + BoundingBoxMargin - 1, Y + 6 + BoundingBoxMargin - 1),
+            new BoundingBox(X - BoundingBoxMargin, Y - 7, X + StructureXSize + BoundingBoxMargin - 1, Y + StructureYSize + BoundingBoxMargin - 1)
+        ];
+    }
+    
     public override void Generate()
     {
         _GenerateStructure();
