@@ -42,11 +42,14 @@ public class MainHouseBStructure : CustomStructure
     public override string FilePath => _filePath;
     public sealed override ushort StructureXSize => _structureXSize;
     public sealed override ushort StructureYSize => _structureYSize;
+    public bool InUnderworld;
     
-    public MainHouseBStructure(ushort x = 0, ushort y = 0)
+    public MainHouseBStructure(ushort x = 0, ushort y = 0, bool inUnderworld = false)
     {
         Floors = _floors;
         ConnectPoints = _connectPoints;
+
+        InUnderworld = inUnderworld;
         
         X = x;
         Y = y;
@@ -56,8 +59,17 @@ public class MainHouseBStructure : CustomStructure
     public override void Generate()
     {
         Floors[0].GenerateFoundation(TileID.Dirt, foundationRadius: 31, foundationYOffset: 5);
-        ConnectPoints[2][0].BlendLeft(topTileID: TileID.Grass, blendDistance: 20, maxFillCount: 25);
-        ConnectPoints[3][0].BlendRight(topTileID: TileID.Grass, blendDistance: 20, maxFillCount: 25);
+        
+        if (!InUnderworld)
+        {
+            ConnectPoints[2][0].BlendLeft(topTileID: TileID.Grass, blendDistance: 20, maxFillCount: 25);
+            ConnectPoints[3][0].BlendRight(topTileID: TileID.Grass, blendDistance: 20, maxFillCount: 25);
+        }
+        else
+        {
+            ConnectPoints[2][0].BlendLeft(topTileID: TileID.Grass, blendDistance: 20, maxFillCount: 25, maxHeight: 10);
+            ConnectPoints[3][0].BlendRight(topTileID: TileID.Grass, blendDistance: 20, maxFillCount: 25, maxHeight: 10);
+        }
 
         _GenerateStructure();
         
