@@ -1,3 +1,3 @@
-displayName = Spawn Houses
+displayName = Generated Houses
 author = CornHusker
 version = 0.3.0
